[gd_scene load_steps=2 format=3 uid="uid://dqhc1a1233nt4"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_echso"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_echso")

[node name="WholeScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChargeBar" type="ProgressBar" parent="WholeScreen" groups=["UI Elements"]]
layout_direction = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_right = 224.0
offset_bottom = -12.0
grow_vertical = 0
max_value = 200.0
step = 1.0
show_percentage = false

[node name="ChargeLevels" type="Label" parent="WholeScreen" groups=["UI Elements"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -77.845
offset_right = 40.0
offset_bottom = -54.845
grow_vertical = 0
text = "1"
